applications/harmelodic-blog/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  annotations:
    cert-manager.io/issuer: blog-acme # Will generate Certificate
    cert-manager.io/revision-history-limit: "1"
spec:
  ingressClassName: public
  rules:
    - host: blog.api.harmelodic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog
                port:
                  name: http
  tls:
    - hosts:
        - blog.api.harmelodic.com
      secretName: tls-cert-blog-api-harmelodic-com # Secret will be auto-generated by cert-manager
